# account-service-fastapi-mongodb

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
.docker/: .env.example  docker-compose.yaml
.docker/fastapi/: Dockerfile
.github/workflows/: lint.yml  test.yml
.script/: docker.bat  run.bat
src/: main.py  settings.py
src/dependencies/: auth.py  token_version.py  user.py
src/dependencies/mongodb/: _client.py  _connection.py  token_version.py  user.py
src/dependencies/repositories/: user.py
src/dependencies/services/: user.py
src/fields/: password.py
src/helpers/: auth.py
src/models/: _base.py  base.py  token_version.py  user.py
src/routers/: auth.py  auth_user.py  user.py
src/schemas/: auth.py  list.py  token.py  user.py
src/services/: token_version.py  user.py
src/utils/: password.py  token.py
tests/: conftest.py  test_create_account.py  test_get_current_user_info.py  test_get_user.py  test_health_check.py  test_heath_check.py  test_login.py
